@@ -38,6 +38,7 @@ mlr_2.5:
 - Learner Propoerties are now implemented object oriented as a state of a Learner.
   Only RLearners have the properties stored in a slot.
   For each class the getter can be overwritten.
+- The hill climbing algorithm for stacking (Caruana 04) is implemented as method 'hill.climb' in 'makeStackedLearner' to select models from base learners, which is equivalent to weighted average.
 
 - new functions
 -- getDefaultMeasure
